--- a/index.html
+++ b/index.html
@@ -227,6 +227,7 @@
     <polygon class="st6" points="588.8,361.7 584.4,359.5 580,361.8 580.8,356.9 577.3,353.5 582.2,352.7 584.3,348.3 586.5,352.7
     	591.4,353.4 587.9,356.9 "/>
     <rect x="596.7" y="341.7" transform="matrix(0.9033 -0.4289 0.4289 0.9033 -90.519 295.0067)" class="st17" width="25.2" height="13.3"/>
+    <!-- Light Blue trigger modal -->
     <rect x="514.4" y="361.8" class="st7" width="26" height="6.2"/>
     <rect x="484.8" y="208.8" class="st8" width="20.7" height="20.7"/>
     <polygon class="st6" points="499.6,225.9 495.2,223.6 490.8,225.9 491.6,221.1 488.1,217.6 493,216.9 495.1,212.4 497.4,216.9
@@ -237,8 +238,11 @@
     <rect x="430.8" y="307.4" class="st4" width="17.1" height="17.1"/>
     <rect x="499.2" y="405.9" class="st4" width="17.1" height="17.1"/>
     <rect x="401.9" y="332.9" class="st17" width="25.2" height="10.2"/>
+    <!-- Blue Modal Trigger -->
     <rect x="436.5" y="339.3" transform="matrix(0.8078 -0.5895 0.5895 0.8078 -116.3957 329.9946)" class="st20" width="22.6" height="8.4"/>
+    <!-- Purple Modal Trigger -->
     <rect x="359.1" y="326.2" class="st21" width="38.6" height="16.9"/>
+    <!-- Purple Modal Trigger -->
     <rect x="292.6" y="326.2" class="st21" width="38.6" height="16.9"/>
     <rect x="334.8" y="322.2" class="st5" width="20.7" height="20.7"/>
     <polygon class="st6" points="349.6,339.2 345.2,337 340.8,339.3 341.6,334.4 338,331 342.9,330.2 345.1,325.8 347.3,330.2
@@ -286,15 +290,25 @@
     <!-- Green trigger modal -->
     <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
     <rect x="113.1" y="379.9" class="st17" width="25.2" height="6.6"/>
+    </a>
+    <!-- Green trigger modal -->
     <rect x="199.1" y="383.2" class="st17" width="29.2" height="6.6"/>
     <rect x="256.3" y="376.5" class="st17" width="18.7" height="6.6"/>
+    <!-- Green trigger modal -->
     <rect x="373.1" y="376.5" class="st17" width="18.7" height="6.6"/>
+    <!-- Green trigger modal -->
     <rect x="325.4" y="376.5" class="st17" width="18.7" height="6.6"/>
+    <!-- Green trigger modal -->
     <rect x="373.1" y="388.6" class="st17" width="18.7" height="6.6"/>
+    <!-- Blue trigger modal -->
     <rect x="401.9" y="376.5" class="st20" width="18.7" height="6.6"/>
+    <!-- Blue trigger modal -->
     <rect x="424.9" y="388.6" class="st20" width="18.7" height="6.6"/>
+    <!-- Light Blue trigger modal -->
     <rect x="147.4" y="355.5" class="st7" width="29.2" height="6.6"/>
+    <!-- Light Blue trigger modal -->
     <rect x="256.3" y="361" class="st7" width="18.7" height="6.6"/>
+    <!-- Light Blue trigger modal -->
     <rect x="325.4" y="361" class="st7" width="18.7" height="6.6"/>
     <rect x="359.1" y="352" class="st30" width="69.9" height="16.3"/>
     <rect x="429" y="431.4" class="st8" width="20.7" height="20.7"/>
@@ -322,18 +336,30 @@
     	107.4,412.7 103.9,416.2 "/>
     <rect x="34.8" y="416.9" class="st31" width="53.3" height="66"/>
     <rect x="93.2" y="480.4" class="st4" width="17.1" height="17.1"/>
+    <!-- Yellow Modal Trigger -->
     <rect x="153.4" y="484.2" class="st31" width="91.4" height="13.2"/>
+    <!-- Green Modal Trigger -->
     <rect x="249.7" y="486.7" class="st17" width="28.6" height="11.1"/>
     <rect x="308.2" y="466.9" class="st32" width="79" height="30.2"/>
+    <!-- Orange Modal Trigger -->
     <rect x="393.3" y="473.9" class="st32" width="67.2" height="23.2"/>
+    <!-- Orange Modal Trigger -->
     <rect x="267.5" y="434.5" class="st32" width="46.8" height="13.5"/>
+    <!-- Yellow Modal Trigger -->
     <rect x="251" y="437.9" class="st31" width="10.6" height="6.8"/>
+    <!-- Orange Modal Trigger -->
     <rect x="337.1" y="438.5" class="st32" width="10.6" height="6.8"/>
+    <!-- Orange Modal Trigger -->
     <rect x="320.1" y="438.5" class="st32" width="10.6" height="6.8"/>
+    <!-- Orange Modal Trigger -->
     <rect x="385.5" y="437.9" class="st32" width="15.6" height="6.8"/>
+    <!-- Orange Modal Trigger -->
     <rect x="407.9" y="430.9" class="st32" width="6.8" height="22.1"/>
+    <!-- Yellow Modal Trigger -->
     <rect x="155.9" y="438.5" class="st31" width="19.1" height="6.8"/>
+    <!-- Yellow Modal Trigger -->
     <rect x="185.4" y="438.5" class="st31" width="19.1" height="6.8"/>
+    <!-- Green Modal Trigger -->
     <rect x="433.8" y="402.5" class="st17" width="25.2" height="10.2"/>
     <polygon class="st6" points="334.2,112.8 327.5,109.3 320.8,112.9 322,105.4 316.5,100.2 324,99 327.4,92.2 330.8,99 338.2,100
     	332.9,105.4 "/>
@@ -1127,6 +1153,7 @@
     		l-0.9,0.3l1.4,3.8l-1.5,0.6l-3.7-10L601.8,317.6z M603.6,319.7c-0.1-0.3-0.3-0.4-0.5-0.5s-0.5-0.1-0.7,0l-0.9,0.3l1.2,3.2l0.9-0.3
     		c0.2-0.1,0.4-0.2,0.5-0.5c0.1-0.2,0.1-0.5,0-0.7L603.6,319.7z"/>
     </g>
+    <!-- Food Trucks trigger modal -->
     <rect x="97.4" y="325.8" class="st42" width="72.2" height="17"/>
     <g>
     	<path d="M103.4,340h-1.6v-10.7h4.6v1.6h-3v2.9h2.2v1.6h-2.2V340z"/>
