--- a/index.html
+++ b/index.html
@@ -25,28 +25,11 @@
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <a class="navbar-brand page-scroll" href="#page-top"><img alt="LBP" src="lblgplogo.png" width="80px" /></a>
+                <a class="navbar-brand page-scroll" href="http://longbeachpride.com/"><img alt="LBLGP" src="lblgplogo.png" width="80px" /></a>
             </div>
         </div>
         <!-- /.container-fluid -->
     </nav>
-
-    <br />
-    <br />
-    <br />
-    <br />
-    <br />
-
-
-
-    <h1>Hello, world!</h1>
-
-
-
-
-
-
-
 
 
 
