--- a/index.html
+++ b/index.html
@@ -216,8 +216,8 @@
     	936.8,474.5 925.5,486.5 "/>
     <polygon class="st17" points="911.5,435.4 971,387.8 996,419.8 936.5,467.4 "/>
     <!-- Light Blue Modal Trigger -->
-    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#lightBlueModal">
-    <rect x="772.7" y="439" class="st7" width="101.7" height="33.7"/>
+    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#blueModal">
+    <rect style="fill: blue!important;" x="772.7" y="439" class="st7" width="101.7" height="33.7"/>
     </a>
     <rect x="742.3" y="23" class="st8" width="43.8" height="44.4"/>
     <polygon class="st6" points="773.6,59.7 764.3,54.8 755,59.7 756.7,49.4 749.3,41.9 759.7,40.4 764.1,30.8 769,40.4 779.3,41.9
@@ -314,16 +314,16 @@
     <rect x="662.3" y="516.7" class="st20" width="76.7" height="41.1"/>
     </a>
     <!-- Light Blue Modal Trigger -->
-    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#lightBlueModal">
-    <rect x="259.5" y="392.2" class="st7" width="102.3" height="48.2"/>
+    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#blueModal">
+    <rect style="fill: blue!important;" x="259.5" y="392.2" class="st7" width="102.3" height="48.2"/>
     </a>
     <!-- Light Blue Modal Trigger -->
-    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#lightBlueModal">
-    <rect x="397.1" y="391.4" class="st7" width="68.3" height="49"/>
+    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#blueModal">
+    <rect style="fill: blue!important;" x="397.1" y="391.4" class="st7" width="68.3" height="49"/>
     </a>
     <!-- Light Blue Modal Trigger -->
-    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#lightBlueModal">
-    <rect x="526.5" y="391.8" class="st7" width="58.1" height="48.2"/>
+    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#blueModal">
+    <rect style="fill: blue!important;" x="526.5" y="391.8" class="st7" width="58.1" height="48.2"/>
     </a>
     <rect x="590.3" y="395.1" class="st30" width="166.2" height="42.3"/>
     <rect x="688" y="639.4" class="st8" width="35.8" height="72.2"/>
@@ -348,12 +348,18 @@
     	449.6,597.2 440,609.3 "/>
     <rect x="54.7" y="617.5" class="st31" width="83" height="124.6"/>
     <rect x="61" y="806.9" class="st4" width="41" height="48.6"/>
+    <!-- Yellow Modal Trigger -->
+    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#yellowModal">
     <rect x="169.9" y="793.5" class="st31" width="164.2" height="61.9"/>
+    </a>
     <!-- Green Modal Trigger -->
     <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#greenModal">
     <rect x="340.1" y="806.9" class="st17" width="51.4" height="49.4"/>
     </a>
+    <!-- Orange Modal Trigger -->
+    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#orangeModal">
     <rect x="447.3" y="768.5" class="st32" width="142" height="85.8"/>
+    </a>
     <!-- Linden Modal Trigger -->
     <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#lindenModal">
     <rect x="600.8" y="768.8" class="st32" width="120.8" height="85.8"/>
