--- a/index.html
+++ b/index.html
@@ -215,10 +215,7 @@
     <polygon class="st6" points="928.4,502.9 914.3,495.4 900.2,503.2 902.8,486.5 891.6,474.9 907.3,472.1 914,457.1 921.1,472.1
     	936.8,474.5 925.5,486.5 "/>
     <polygon class="st17" points="911.5,435.4 971,387.8 996,419.8 936.5,467.4 "/>
-    <!-- Light Blue Modal Trigger -->
-    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#blueModal">
-    <rect style="fill: blue!important;" x="772.7" y="439" class="st7" width="101.7" height="33.7"/>
-    </a>
+    <rect x="772.7" y="439" class="st7" width="101.7" height="33.7"/>
     <rect x="742.3" y="23" class="st8" width="43.8" height="44.4"/>
     <polygon class="st6" points="773.6,59.7 764.3,54.8 755,59.7 756.7,49.4 749.3,41.9 759.7,40.4 764.1,30.8 769,40.4 779.3,41.9
     	771.7,49.2 "/>
@@ -305,12 +302,12 @@
     <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#greenModal">
     <rect x="559.8" y="516.5" class="st17" width="50.6" height="36.4"/>
     </a>
-    <!-- Blue Modal Trigger -->
-    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" href="#blueModal">
+    <!-- Sponsors Modal Trigger -->
+    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" href="#sponsorsModal">
     <rect x="623.6" y="472.8" class="st20" width="81" height="36.4"/>
     </a>
-    <!-- Blue Modal Trigger -->
-    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" href="#blueModal">
+    <!-- Sponsors Modal Trigger -->
+    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" href="#sponsorsModal">
     <rect x="662.3" y="516.7" class="st20" width="76.7" height="41.1"/>
     </a>
     <!-- Light Blue Modal Trigger -->
@@ -325,7 +322,10 @@
     <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#blueModal">
     <rect style="fill: blue!important;" x="526.5" y="391.8" class="st7" width="58.1" height="48.2"/>
     </a>
+    <!-- Merchandise Modal Trigger -->
+    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#merchModal">
     <rect x="590.3" y="395.1" class="st30" width="166.2" height="42.3"/>
+    </a>
     <rect x="688" y="639.4" class="st8" width="35.8" height="72.2"/>
     <polygon class="st6" points="713.7,691.2 706,685.4 698.4,691.2 699.8,678.8 693.6,670.2 702.1,668.4 705.9,657 709.7,668.1
     	718.2,669.9 712.1,678.8 "/>
@@ -1375,7 +1375,7 @@
           <div class="modal-content">
             <div class="modal-header">
               <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="purpleModalLabel">Purple Vendors</h4>
+              <h4 class="modal-title" id="purpleModalLabel">Convention Center Vendors</h4>
             </div>
             <div class="modal-body">
               <table class="table table-striped table-bordered">
@@ -1388,11 +1388,64 @@
           </thead>
           <tbody>
             <tr>
-              <td>Type</td>
-              <td>name</td>
-              <td>number</td>
-            </tr>
+        <td>Food Vendor</td>
+        <td>Olis Tacos</td>
+        <td>C 1</td>
+ </tr>
 
+<tr>
+        <td>Food Vendor</td>
+        <td>Mikie Tacos</td>
+        <td>C 8</td>
+ </tr>
+
+<tr>
+        <td>Food Vendor</td>
+        <td>Madame FuFuu</td>
+        <td>C 4</td>
+ </tr>
+
+<tr>
+        <td>Food Vendor</td>
+        <td>Bangok Grill</td>
+        <td>C 7</td>
+ </tr>
+
+<tr>
+        <td>Booth Vendor</td>
+        <td>The FIGHT Magazine (MEDIA)</td>
+        <td>CS Row</td>
+ </tr>
+
+<tr>
+        <td>Booth Vendor</td>
+        <td>Las Vegas Pride Magazine (MEDIA)</td>
+        <td>CS Row</td>
+ </tr>
+
+<tr>
+        <td>Food Vendor</td>
+        <td>Sweet Fire Roasted Nuts</td>
+        <td>C 5</td>
+ </tr>
+
+<tr>
+        <td>Food Vendor</td>
+        <td>What The Funnel</td>
+        <td>C 2</td>
+ </tr>
+
+<tr>
+        <td>Food Vendor</td>
+        <td>My café Pudique</td>
+        <td>C 6</td>
+ </tr>
+
+<tr>
+        <td>Food Vendor</td>
+        <td>Dippin Chicken</td>
+        <td>C 3</td>
+ </tr>
           </tbody>
          </table>
             </div>
@@ -1736,7 +1789,7 @@ Board Certified Family Practice</td>
               <div class="modal-content">
                 <div class="modal-header">
                   <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                  <h4 class="modal-title" id="purpleModalLabel">Linden Food Court Vendors</h4>
+                  <h4 class="modal-title" id="lindenModalLabel">Linden Food Court Vendors</h4>
                 </div>
                 <div class="modal-body">
                   <table class="table table-striped table-bordered">
@@ -1781,6 +1834,43 @@ Board Certified Family Practice</td>
 
               </tbody>
              </table>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <!--  Sponsors Modal -->
+          <div class="modal fade" id="sponsorsModal" tabindex="-1" role="dialog" aria-labelledby="sponsorsModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="sponsorsModalLabel">Sponsors</h4>
+                </div>
+                <div class="modal-body">
+                  <a href="http://longbeachpride.com/sponsors/"><h3>Introducing our Sponsors for Long Beach Pride 2017</h3></a>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!--  Merchandise Modal -->
+          <div class="modal fade" id="merchModal" tabindex="-1" role="dialog" aria-labelledby="merchModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="merchModalLabel">Merchandise</h4>
+                </div>
+                <div class="modal-body">
+                  <h3>Long Beach Pride Merchandise</h3>
                 </div>
                 <div class="modal-footer">
                   <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
