--- a/index.html
+++ b/index.html
@@ -21,21 +21,15 @@
   </head>
   <body>
 
-    <nav id="mainNav" class="navbar navbar-default navbar-fixed-top">
+    <nav id="mainNav" class="navbar navbar-default">
         <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header">
+            <div class="navbar-header text-center">
                 <a class="navbar-brand page-scroll" href="http://longbeachpride.com/"><img alt="LBLGP" src="lblgplogo.png" width="80px" /></a>
             </div>
         </div>
         <!-- /.container-fluid -->
     </nav>
-
-<br />
-<br />
-<br />
-<br />
-<br />
 
 
 <div class="row">
@@ -981,6 +975,28 @@
 </div>
 
 
+
+<div class="row text-center" style="">
+  <div class="col-xs-4 text-center">
+    <img class="img-responsive" src="greenstar.png" width="50px" /><br />
+    <h5>
+      Beverage Service Only
+    </h5>
+  </div>
+  <div class="col-xs-4 text-center">
+    <img class="img-responsive" src="bluestar.png" width="50px" /><br />
+    <h5>
+      Budlight Products Only
+    </h5>
+  </div>
+  <div class="col-xs-4 text-center">
+    <img class="img-responsive" src="cross.png" width="50px" /><br />
+    <h5>
+      Emergency Stations
+    </h5>
+  </div>
+</div>
+<br />
 
 
 <div class="row text-center">
