--- a/index.html
+++ b/index.html
@@ -21,15 +21,39 @@
   </head>
   <body>
 
-    <nav id="mainNav" class="navbar navbar-default">
-        <div class="container-fluid">
+<!--  <nav id="mainNav" class="navbar navbar-default">
+    <!--     <div class="container-fluid">
             <!-- Brand and toggle get grouped for better mobile display -->
-            <div class="navbar-header text-center">
+      <!--       <div class="navbar-header text-center">
                 <a class="navbar-brand page-scroll" href="http://longbeachpride.com/"><img alt="LBLGP" src="lblgplogo.png" width="80px" /></a>
             </div>
         </div>
         <!-- /.container-fluid -->
-    </nav>
+  <!--   </nav> -->
+  <br />
+
+    <div class="row text-center" style="">
+      <div class="col-xs-4 text-center">
+        <img class="img-responsive" src="greenstar.png" width="30px" /><br />
+        <h5>
+          Beverage Service Only
+        </h5>
+      </div>
+      <div class="col-xs-4 text-center">
+        <img class="img-responsive" src="bluestar.png" width="30px" /><br />
+        <h5>
+          Budlight Products Only
+        </h5>
+      </div>
+      <div class="col-xs-4 text-center">
+        <img class="img-responsive" src="cross.png" width="30px" /><br />
+        <h5>
+          Emergency Stations
+        </h5>
+      </div>
+    </div>
+
+    <br />
 
 
 <div class="row">
@@ -342,8 +366,8 @@
     	449.6,597.2 440,609.3 "/>
     <rect x="54.7" y="617.5" class="st31" width="83" height="124.6"/>
     <rect x="61" y="806.9" class="st4" width="41" height="48.6"/>
-    <!-- Yellow Modal Trigger -->
-    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#yellowModal">
+    <!-- Food Court Modal Trigger -->
+    <a type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#foodCourtModal">
     <rect x="169.9" y="793.5" class="st31" width="164.2" height="61.9"/>
     </a>
     <!-- Green Modal Trigger -->
@@ -976,63 +1000,58 @@
 
 
 
-<div class="row text-center" style="">
-  <div class="col-xs-4 text-center">
-    <img class="img-responsive" src="greenstar.png" width="50px" /><br />
-    <h5>
-      Beverage Service Only
-    </h5>
-  </div>
-  <div class="col-xs-4 text-center">
-    <img class="img-responsive" src="bluestar.png" width="50px" /><br />
-    <h5>
-      Budlight Products Only
-    </h5>
-  </div>
-  <div class="col-xs-4 text-center">
-    <img class="img-responsive" src="cross.png" width="50px" /><br />
-    <h5>
-      Emergency Stations
-    </h5>
-  </div>
-</div>
-<br />
-
 
 <div class="row text-center">
   <!-- Green Modal Trigger -->
   <a type="button" class="" data-toggle="modal" data-target="#greenModal">
-  <div class="col-md-2 green">
+  <div class="col-md-3 green">
     <h3>Green</h3>
   </div>
   </a>
   <!-- Yellow Modal Trigger -->
   <a type="button" class="" data-toggle="modal" data-target="#yellowModal">
-  <div class="col-md-2 yellow">
+  <div class="col-md-3 yellow">
     <h3>Yellow</h3>
   </div>
   </a>
   <!-- Orange Modal Trigger -->
   <a type="button" class="" data-toggle="modal" data-target="#orangeModal">
-  <div class="col-md-2 orange">
+  <div class="col-md-3 orange">
     <h3>Orange</h3>
   </div>
   </a>
   <!-- Blue Modal Trigger -->
   <a type="button" class="" data-toggle="modal" data-target="#blueModal">
-  <div class="col-md-2 blue">
+  <div class="col-md-3 blue">
     <h3>Blue</h3>
+  </div>
+  </a>
+</div>
+
+<hr class="hide-mobile" />
+
+<div class="row text-center">
+  <!-- Green Modal Trigger -->
+  <a type="button" class="" data-toggle="modal" data-target="#purpleModal">
+  <div class="col-md-3 purple">
+    <h3>Convention Center</h3>
+  </div>
+  </a>
+  <!-- Yellow Modal Trigger -->
+  <a type="button" class="" data-toggle="modal" data-target="#foodCourtModal">
+  <div class="col-md-3 yellow">
+    <h3>Food Court</h3>
   </div>
   </a>
   <!-- Food Truck Modal Trigger -->
   <a type="button" class="" data-toggle="modal" data-target="#foodTruckModal">
-  <div class="col-md-2 food-truck">
+  <div class="col-md-3 food-truck">
     <h3>Food Truck</h3>
   </div>
   </a>
   <!-- Linden Modal Trigger -->
   <a type="button" class="" data-toggle="modal" data-target="#lindenModal">
-  <div class="col-md-2 linden">
+  <div class="col-md-3 linden">
     <h3>Linden</h3>
   </div>
   </a>
@@ -1044,11 +1063,6 @@
 <!-- Start Modals -->
 
 
-<div>
-  <div>
-
-  </div>
-</div>
 
 <!-- Green Modal -->
 <div class="modal fade" id="greenModal" tabindex="-1" role="dialog" aria-labelledby="greenModalLabel">
@@ -1846,6 +1860,71 @@ Board Certified Family Practice</td>
                   <td>Food Court</td>
                   <td>Famous Dave's</td>
                   <td>L 8</td>
+                </tr>
+
+              </tbody>
+             </table>
+                </div>
+                <div class="modal-footer">
+                  <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                </div>
+              </div>
+            </div>
+          </div>
+
+
+          <!-- Food Court Modal -->
+          <div class="modal fade" id="foodCourtModal" tabindex="-1" role="dialog" aria-labelledby="foodCourtModalLabel">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                  <h4 class="modal-title" id="lindenModalLabel">Food Court Vendors</h4>
+                </div>
+                <div class="modal-body">
+                  <table class="table table-striped table-bordered">
+              <thead>
+                <tr>
+                  <th>Food Court</th>
+                  <th>Company/Organization</th>
+                  <th>Booth Number</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>Food Court</td>
+                  <td>Mario's Tacos</td>
+                  <td>F 1</td>
+                </tr>
+                <tr>
+                  <td>Food Court</td>
+                  <td>Hot & Sizzling Grill</td>
+                  <td>F 2</td>
+                </tr>
+                <tr>
+                  <td>Food Court</td>
+                  <td>Corn Dogs Gone Wild</td>
+                  <td>F 4</td>
+                </tr>
+                <tr>
+                  <td>Food Court</td>
+                  <td>Micho & Mary</td>
+                  <td>F 5</td>
+                </tr>
+                <tr>
+                  <td>Food Court</td>
+                  <td>V & R Thai Food</td>
+                  <td>F 6</td>
+                </tr>
+                <tr>
+                  <td>Food Court</td>
+                  <td>D & D Services</td>
+                  <td>F 7</td>
+                </tr>
+                <tr>
+                  <td>Food Court</td>
+                  <td>Ghouliance, Inc.  KING CORN</td>
+                  <td>F 8</td>
                 </tr>
 
               </tbody>
