--- a/index.html
+++ b/index.html
@@ -1003,7 +1003,7 @@
 
 <div class="row text-center">
   <!-- Green Modal Trigger -->
-  <a type="" class="" data-toggle="modal" data-target="#greenModal" href="www.izonemarketing.com">
+  <a type="" class="" data-toggle="modal" data-target="#greenModal" href="">
   <div class="col-md-3 green">
     <h3>Green</h3>
   </div>
