--- a/index.html
+++ b/index.html
@@ -1009,7 +1009,7 @@
   </div>
   </a>
   <!-- Yellow Modal Trigger -->
-  <a type="button" class="" data-toggle="modal" data-target="#yellowModal">
+  <a type="button" class="" data-toggle="modal" data-target="#yellowModal" href="">
   <div class="col-md-3 yellow">
     <h3>Yellow</h3>
   </div>
