--- a/index.html
+++ b/index.html
@@ -1015,13 +1015,13 @@
   </div>
   </a>
   <!-- Orange Modal Trigger -->
-  <a type="button" class="" data-toggle="modal" data-target="#orangeModal">
+  <a type="button" class="" data-toggle="modal" data-target="#orangeModal" href="">
   <div class="col-md-3 orange">
     <h3>Orange</h3>
   </div>
   </a>
   <!-- Blue Modal Trigger -->
-  <a type="button" class="" data-toggle="modal" data-target="#blueModal">
+  <a type="button" class="" data-toggle="modal" data-target="#blueModal" href="">
   <div class="col-md-3 blue">
     <h3>Blue</h3>
   </div>
@@ -1032,25 +1032,25 @@
 
 <div class="row text-center">
   <!-- Green Modal Trigger -->
-  <a type="button" class="" data-toggle="modal" data-target="#purpleModal">
+  <a type="button" class="" data-toggle="modal" data-target="#purpleModal" href="">
   <div class="col-md-3 purple">
     <h3>Convention Center</h3>
   </div>
   </a>
   <!-- Yellow Modal Trigger -->
-  <a type="button" class="" data-toggle="modal" data-target="#foodCourtModal">
+  <a type="button" class="" data-toggle="modal" data-target="#foodCourtModal" href="">
   <div class="col-md-3 yellow">
     <h3>Food Court</h3>
   </div>
   </a>
   <!-- Food Truck Modal Trigger -->
-  <a type="button" class="" data-toggle="modal" data-target="#foodTruckModal">
+  <a type="button" class="" data-toggle="modal" data-target="#foodTruckModal" href="">
   <div class="col-md-3 food-truck">
     <h3>Food Truck</h3>
   </div>
   </a>
   <!-- Linden Modal Trigger -->
-  <a type="button" class="" data-toggle="modal" data-target="#lindenModal">
+  <a type="button" class="" data-toggle="modal" data-target="#lindenModal" href="">
   <div class="col-md-3 linden">
     <h3>Linden</h3>
   </div>
